--- a/src/styles.css
+++ b/src/styles.css
@@ -9,14 +9,13 @@ body
 {
 	width: 500px; 
 	height: 500px;
-	position: relative;
 }
 
 #onionContainer
 {
 	padding: 20px;
-	width: 600px; 
-	height: 600px;
+	width: 650px; 
+	height: 700px;
 }
 
 #onionCounter
@@ -28,4 +27,9 @@ body
 {
 	width: 100%;
 	text-align: right;
+}
+
+#sctructureContainer
+{
+	
 }
