--- a/src/app/structure/structure.component.html
+++ b/src/app/structure/structure.component.html
@@ -6,8 +6,14 @@
 		</td>
 		<td>
 			<div id="name">{{ str.name }}</div>
-			<div>{{ str.description}}</div>
-			<div> </div>
+			<div id="description">{{ str.description}}</div>
+			<div>Cena: {{str.base_prize}} cebul</div>
+			<div>+{{str.production_rate}} produkcja cebul/s</div>
+		</td>
+		<td>
+			<div id="numOfStructures">
+				0
+			</div>
 		</td>
 	</tr>
   </table>
