--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,96 @@
 /* You can add global styles to this file, and also import other style files */
 body
 {
-	background-color: black;
 	color: yellow;
+	background: #c3f1fe ; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(#c3f1fe , #f1feff ); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#c3f1fe , #f1feff ); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#c3f1fe , #f1feff ); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#c3f1fe , #f1feff ); /* Standard syntax */
+}
+
+.navbar-default
+{
+	background-color: #c5f3ff;
+	border-color: #c5f3ff;
+}
+.navbar-default .navbar-nav > li > a {
+    color: #777;
+}
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+    color: #333;
+}
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+    color: #555;
+    background-color: #c5f3ff;
 }
 
 #mainOnion
 {
 	width: 500px; 
 	height: 500px;
+	position: absolute;
+	left: 5px;
+	top: 5px;
+	z-index: 5;
+}
+
+#radialStripes1
+{
+	position: absolute;
+	left: 5px;
+	width: 500px; 
+	height: 500px;
+	top: 20px;
+	z-index: 1;
+	
+	-webkit-animation-name: spin1;
+    -webkit-animation-duration: 40000ms;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    -moz-animation-name: spin1;
+    -moz-animation-duration: 40000ms;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: linear;
+    -ms-animation-name: spin1;
+    -ms-animation-duration: 40000ms;
+    -ms-animation-iteration-count: infinite;
+    -ms-animation-timing-function: linear;
+    
+    animation-name: spin1;
+    animation-duration: 40000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+#radialStripes2
+{
+	position: absolute;
+	left: 5px;
+	width: 500px; 
+	height: 500px;
+	top: 20px;
+	z-index: 2;
+	
+	-webkit-animation-name: spin2;
+    -webkit-animation-duration: 30000ms;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    -moz-animation-name: spin2;
+    -moz-animation-duration: 30000ms;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: linear;
+    -ms-animation-name: spin2;
+    -ms-animation-duration: 30000ms;
+    -ms-animation-iteration-count: infinite;
+    -ms-animation-timing-function: linear;
+    
+    animation-name: spin2;
+    animation-duration: 30000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
 }
 
 #onionContainer
@@ -18,9 +100,21 @@ body
 	height: 700px;
 }
 
+@font-face {
+	font-family: 'Semringah';
+	src: URL('assets/Semringah.ttf') format('ttf'),
+	url('assets/Semringah.ttf')  format('truetype'); /* Safari, Android, iOS */
+
+
+}
+
 #onionCounter
 {
 	font-size: 50px;
+	background: -webkit-linear-gradient(#91522c, #7a3827);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	font-family: "Semringah"
 }
 
 #loginContainer
@@ -29,7 +123,28 @@ body
 	text-align: right;
 }
 
-#sctructureContainer
-{
-	
+@-moz-keyframes spin1 {
+    from { -moz-transform: rotate(0deg); }
+    to { -moz-transform: rotate(360deg); }
 }
+@-webkit-keyframes spin1 {
+    from { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(360deg); }
+}
+@keyframes spin1 {
+    from {transform:rotate(0deg);}
+    to {transform:rotate(360deg);}
+}
+@-moz-keyframes spin2 {
+    from { -moz-transform: rotate(0deg); }
+    to { -moz-transform: rotate(-360deg); }
+}
+@-webkit-keyframes spin2 {
+    from { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(-360deg); }
+}
+@keyframes spin2 {
+    from {transform:rotate(0deg);}
+    to {transform:rotate(-360deg);}
+}
+
