przeniesienie stanu struktur do zewnętrznego serwisu, usunięcie testowego componentu

--- a/src/app/structure/structure.component.html
+++ b/src/app/structure/structure.component.html
@@ -1,4 +1,4 @@
-<div class="structureMain" *ngFor="let str of structures" >
+<div class="structureMain" *ngFor="let str of this.gs.structures">
   <table>
 	<tr>
 		<td>
