--- a/src/app/onion/onion.component.html
+++ b/src/app/onion/onion.component.html
@@ -1,4 +1,4 @@
-<img id="mainOnion" src="assets/onion_glow.svg" (click)="clicked()" />
+<img id="mainOnion" src="assets/onion_glow.svg" (click)="clicked()" (mousedown)="mousedown()" (mouseup)="mouseup()" />
 <img id="radialStripes1" src="assets/radial_stripes.svg" />
 <img id="radialStripes2" src="assets/radial_stripes.svg" />
 <div id="onionCounter">
