--- a/src/app/onion/onion.component.html
+++ b/src/app/onion/onion.component.html
@@ -4,3 +4,6 @@
 <div id="onionCounter">
 cebule: {{ this.gs.onions }}
 </div>
+<div id="onionPerSecond">
++{{ this.gs.onionPerSecond }} / sec
+</div>
