odświeżanie stanu kilka razy na sekunde

--- a/src/app/onion/onion.component.html
+++ b/src/app/onion/onion.component.html
@@ -2,7 +2,7 @@
 <img id="radialStripes1" src="assets/radial_stripes.svg" />
 <img id="radialStripes2" src="assets/radial_stripes.svg" />
 <div id="onionCounter">
-cebule: {{ this.gs.onions }}
+cebule: {{ this.gs.printOnions(this.gs.onions) }}
 </div>
 <div id="onionPerSecond">
 +{{ this.gs.onionPerSecond }} / sec
