--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@ body
 	background:url("assets/grass.svg") repeat-x left bottom;
 	width: 100%;
 	height: 170px;
-	position: absolute;
+	position: fixed;
 	bottom: 0px;
 	z-index: 100;
 }
