--- a/src/styles.css
+++ b/src/styles.css
@@ -61,4 +61,24 @@ body
 	text-align: right;
 }
 
+.plusLabel
+{
+	width: 50px;
+	height: 20px;
+	position: absolute;
+	z-index: 1000;
+	
+	font-size: 10px;
+	background: -webkit-linear-gradient(#91522c, #7a3827);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	font-family: "Semringah";
+}
 
+.plusClick
+{
+	width: 4px;
+	height: 4px;
+	margin-right: 3px;
+	margin-bottom: 2px;
+}
