--- a/src/styles.css
+++ b/src/styles.css
@@ -18,24 +18,96 @@ body
 	bottom: 0px;
 	z-index: 100;
 }
-
+.navbar-default .navbar-brand 
+{
+    color: #91522c;
+	font-family: "Semringah";
+	font-size: 250%;
+}
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus 
+{
+    color: #7a3827;
+	font-family: "Semringah";
+	font-size: 150%;
+}
 .navbar-default
 {
 	background-color: #c5f3ff;
 	border-color: #c5f3ff;
 }
+
+.navbar-default .navbar-nav > li > a 
+{
+    color: #7a3827;
+	font-family: "Semringah";
+	font-size: 150%;
+}
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus 
+{
+    color: #7a3827;
+	font-family: "Semringah";
+	font-size: 150%;
+}
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus 
+{
+    color: #7a3827;
+    background-color: #c5f3ff;
+}
+
+.navbar-default .navbar-toggle 
+{
+    border-color: #7a3827;
+}
+.navbar-default .navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus 
+{
+    background-color: #91522c;
+}
+.navbar-default .navbar-toggle .icon-bar 
+{
+    background-color: v
+}
+.nav.navbar-nav.navbar-left .navbar-text
+{
+    color:#7a3827;
+	font-family: "Semringah";
+	font-size: 150%;
+}
+@media (max-width: 767px) 
+{
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a 
+	{
+        color: #ff0000;
+    }
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus 
+	{
+          color:#ff0000;
+    }
+}
+
 .navbar-default .navbar-nav > li > a {
-    color: #777;
+    color: #91522c;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-    color: #333;
+    color: #91522c;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-    color: #555;
+    color: #91522c;
     background-color: #c5f3ff;
+}
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus {
+    color: #91522c;
+    background-color: #D5D5D5;
 }
 
 #mainOnion
