poprawka pozycji dla +1, ładowaniu stanu gry z serwera - cebula + struktury

--- a/src/app/structure/structure.component.html
+++ b/src/app/structure/structure.component.html
@@ -12,7 +12,7 @@
 		</td>
 		<td>
 			<div id="numOfStructures">
-				{{ this.numberOfStructure(str.system_id) }}
+				{{ this.gs.numOfStructure(str.system_id) }}
 			</div>
 		</td>
 	</tr>
