--- a/src/app/onion/onion.component.html
+++ b/src/app/onion/onion.component.html
@@ -1,4 +1,4 @@
-<img id="mainOnion" src="assets/onion_glow.svg" (click)="clicked($event)" (mousedown)="mousedown()" (mouseup)="mouseup()" />
+<div id="mainOnion" style="background-image: url('assets/onion_glow.svg')" (click)="clicked($event)" (mousedown)="mousedown()" (mouseup)="mouseup()" ></div>
 <img id="radialStripes1" src="assets/radial_stripes.svg" />
 <img id="radialStripes2" src="assets/radial_stripes.svg" />
 <div id="onionCounter">
