--- a/src/app/onion/onion.component.css
+++ b/src/app/onion/onion.component.css
@@ -12,6 +12,9 @@
 	width: 600px; 
 	height: 600px;
 	top: 20px;
+	background-repeat: no-repeat;
+    background-position: center;
+	background-size: 100% 100%;
 	z-index: 1;
 	
 	-webkit-animation-name: spin1;
@@ -39,6 +42,9 @@
 	width: 600px; 
 	height: 600px;
 	top: 20px;
+	background-repeat: no-repeat;
+    background-position: center;
+	background-size: 100% 100%;
 	z-index: 2;
 	opacity: 0.5;
 	
