--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,16 @@ body
 	height: 1500px;
 }
 
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
+
 #grassContainer
 {	
 	background:url("assets/grass.svg") repeat-x left bottom;
