Dodano carousel dla reklam + troche sprzatania, optymalizacji i innego badziewa :)

--- a/src/app/structure/structure.component.css
+++ b/src/app/structure/structure.component.css
@@ -3,9 +3,8 @@
 	background-color: orange;
 	height: 80px;
 	width: 350px;
-	border-color: blue;
-	border-style: dotted;
-	margin-bottom: 10px;
+  border: dotted blue;
+  margin-bottom: 10px;
 	color: black;
 }
 
