--- a/src/app/upgrade/upgrade.component.html
+++ b/src/app/upgrade/upgrade.component.html
@@ -1,19 +1,18 @@
-<div class="upgradeMain" *ngFor="let up of this.gs.upgrades; let i = index;" (click)="clicked(i)">
+<div class="upgradeMain" *ngFor="let upgrade of this.gs.upgrades; let i = index;" (click)="clicked(i)">
   <table>
-	<tr>
-		<td>
-			<img src="{{ up.icon }}" />
-		</td>
-		<td>
-			<div id="name">{{ up.name }}</div>
-			<div id="description">{{ up.description}}</div>
-			<div>Cena: {{ up.base_prize }} cebul</div>
-			<div>Mnożnik: {{up.multiplier}}</div>
-		</td>
-		<td>
-			
-		</td>
-	</tr>
+    <tr>
+      <td>
+        <img src="{{ upgrade.icon }}"/>
+      </td>
+      <td>
+        <div id="name">{{ upgrade.name }}</div>
+        <div id="description">{{ upgrade.description}}</div>
+        <div>Cena: {{ upgrade.base_prize }} cebul</div>
+        <div>Mnożnik: {{upgrade.multiplier}}</div>
+      </td>
+      <td>
+
+      </td>
+    </tr>
   </table>
-  
 </div>
