--- a/src/app/onion/onion.component.html
+++ b/src/app/onion/onion.component.html
@@ -1,5 +1,5 @@
 <div class="center">
-  <div id="mainOnion" style="background-image: url('/src/assets/onion_glow.svg')" (click)="clicked($event)"></div>
+  <div id="mainOnion" style="background-image: url('/src/assets/onion_glow.svg')" (click)="clicked($event)" (mousedown)="mousedown()" (mouseup)="mouseup()"></div>
   <!--(mousedown)="mousedown()" (mouseup)="mouseup()"></div>-->
   <div id="radialStripes1" style="background-image: url('/src/assets/radial_stripes.svg')"></div>
   <div id="radialStripes2" style="background-image: url('/src/assets/radial_stripes.svg')"></div>
