--- a/src/app/onion/onion.component.html
+++ b/src/app/onion/onion.component.html
@@ -1,12 +1,12 @@
 <div class="center">
-  <div id="mainOnion" style="background-image: url('/src/assets/onion_glow.svg')" (click)="clicked($event)" (mousedown)="mousedown()" (mouseup)="mouseup()"></div>
+  <div id="mainOnion" style="background-image: url('assets/onion_glow.svg')" (click)="clicked($event)" (mousedown)="mousedown()" (mouseup)="mouseup()"></div>
   <!--(mousedown)="mousedown()" (mouseup)="mouseup()"></div>-->
-  <div id="radialStripes1" style="background-image: url('/src/assets/radial_stripes.svg')"></div>
-  <div id="radialStripes2" style="background-image: url('/src/assets/radial_stripes.svg')"></div>
+  <div id="radialStripes1" style="background-image: url('assets/radial_stripes.svg')"></div>
+  <div id="radialStripes2" style="background-image: url('assets/radial_stripes.svg')"></div>
   <div id="onionCounter" class="noselect">
     cebule: {{ this.gs.printOnions(this.gs.onions) }}
   </div>
   <div id="onionPerSecond" class="noselect">
-    <img id="plusPerSecond" src="/src/assets/plus.svg"/> {{ this.gs.onionPerSecond }} / sec
+    <img id="plusPerSecond" src="src/assets/plus.svg"/> {{ this.gs.onionPerSecond }} / sec
   </div>
 </div>
