--- a/src/app/structure/structure.component.css
+++ b/src/app/structure/structure.component.css
@@ -1,11 +1,12 @@
 .structureMain
 {
-	background-color: orange;
-	height: 80px;
-	width: 350px;
-  border: dotted blue;
-  margin-bottom: 10px;
+	position: relative;
+	background-color: fdf5e0;
+	height: 95px;
+	width: 450px;
 	color: black;
+	padding-top: 15px;
+
 }
 
 .structureMain:hover
@@ -13,10 +14,58 @@
 	background-color: gray;
 }
 
+.structureContainer
+{
+	position: relative;
+	margin-bottom: -13px;
+	margin-top: -15px;
+	top: -17px;
+	//height: 350px;
+	//overflow-y: scroll;
+	//overflow-x: hidden;
+}
+
+.leftColumn
+{
+	width: 15px;
+	height: 100%;
+	background-image: url("../../assets/nav_background_vertical.svg");
+	background-size: contain;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	z-index: 9;
+}
+
+.rightColumn
+{
+	width: 15px;
+	height: 100%;
+	background-image: url("../../assets/nav_background_vertical.svg");
+	background-size: contain;
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	z-index: 9;
+}
+
+.woodenRow
+{
+	position: absolute;
+	background-image: url("../../assets/nav_background.svg");
+	background-size: contain;
+	width: 100%;
+	height: 15px;
+	top: 0px;
+	z-index: 8;
+}
+
 #name
 {
-	font-weight: bold;
-	color: red;
+	position: absolute;
+	left: 85px;
+	top: 37px;
+	font-size: 30px;
 }
 
 #description
@@ -26,6 +75,17 @@
 
 #numOfStructures
 {
-	font-size: 50px;
-	font-weight: bold;
+	position: absolute;
+	right: 30px;
+	top: 37px;
+	font-size: 30px;
+}
+
+#str_icon
+{
+	position: absolute;
+	top: 30px;
+	left: 20px;
+	width: 55px;
+	height: 55px;
 }
