--- a/src/styles.css
+++ b/src/styles.css
@@ -29,7 +29,7 @@ body
 	height: 170px;
 	position: fixed;
 	bottom: 0;
-	z-index: 100;
+	z-index: 110;
 }
 .navbar-default .navbar-brand
 {
@@ -139,12 +139,14 @@ body
 	margin-right: 3px;
 	margin-bottom: 10px;
 }
+
 .panel-default
 {
   color: #7a3827;
 	font-family: "Semringah";
   background-color: unset;
-  border: unset;
+  border: none;
+  box-shadow: none;
   width: 350px;
 }
 .panel-title
@@ -160,44 +162,57 @@ body
 .panel > .panel-heading
 {
   position: relative;
-  margin-left: 0px;
 	color: #7a3827;
+  margin-left: 13px;
 	font-family: "Semringah";
   background-image: url("assets/trunk.svg"),url("assets/trunk.svg"),
                     url("assets/nav_background.svg"),url("assets/nav_background.svg"),url("assets/nav_background.svg"),url("assets/nav_background.svg"),
                     url("assets/trunk.svg"),url("assets/trunk.svg"),
-                    url("assets/nav_background.svg");
+                    url("assets/nav_background.svg"),url("assets/nav_background.svg");
   background-position: 0% 0%, 0% 100%, 
-                       4% 0%, 31% 0%, 58% 0%, 85% 0% , 100% 0% , 100% 100% , 
-                       97% 0%;
+                       2% 0%, 22% 0%, 42% 0%, 62% 0% , 
+                       100% 0% , 100% 100% , 
+                       82% 0%, 98% 0%;
   background-size: 20px , 20px, 
                    80px 40px , 80px 40px , 80px 40px , 80px 40px , 
                    20px, 20px, 
-                   80px 40px;
-  background-repeat: no-repeat,no-repeat,no-repeat;
+                   80px 40px, 80px 40px;
+  background-repeat: no-repeat;
   background-color: transparent;
+  border: none;
+  box-shadow: none;
   height: 40px;
-	width: 370px;
+	width: 455px;
   z-index: 100;
 }
 
 .panel-default .panel-body
 {
-  position: relative;
+  position: relative; 
   background-image:  url("assets/trunk.svg"),url("assets/trunk.svg"),
                      url("assets/nav_background.svg"),url("assets/nav_background.svg"),url("assets/nav_background.svg"),
                      url("assets/nav_background.svg"),url("assets/nav_background.svg"),url("assets/nav_background.svg"),
+                     url("assets/nav_background.svg"),url("assets/nav_background.svg"),url("assets/nav_background.svg"),
                      url("assets/nav_background.svg"),url("assets/nav_background.svg"),url("assets/nav_background.svg");
-  background-position: 0% 100%, 97% 100%, 
-                      -5% 100%, 7% 100%, 22% 100%, 
-                      36% 100%, 50% 100%, 64% 100%,
-                      78% 100%, 93% 100%, 100% 100%;
+  background-position: 3% 100%, 100% 100%, 
+                      0% 100%, 10% 100%, 20% 100%, 
+                      30% 100%, 40% 100%, 50% 100%,
+                      60% 100%, 70% 100%, 80% 100%,
+                      90% 100%, 100% 100%, 102% 100%;
   background-size: 20px, 20px, 80px 19px,
                    80px 19px,80px 19px,80px 19px,
                    80px 19px,80px 19px,80px 19px,
-                   80px 19px,80px 19px;
+                   80px 19px,80px 19px,80px 19px,
+                   80px 19px, 80px 19px;
   background-repeat: no-repeat;
+  width: 468px;
   z-index: 20;
+}
+
+.panel > .panel-collapse
+{
+  width: 455px;
+  z-index: 100;
 }
 
 .panel > .panel-heading > a:focus,
