--- a/src/styles.css
+++ b/src/styles.css
@@ -149,6 +149,7 @@ body
   box-shadow: none;
   width: 350px;
 }
+
 .panel-title
 {
   font-family: "Semringah";
@@ -207,18 +208,27 @@ body
   background-repeat: no-repeat;
   width: 468px;
   z-index: 20;
+  border-style: none;
 }
 
 .panel > .panel-collapse
 {
-  width: 455px;
+  width: 468px;
   z-index: 100;
+  background-color: transparent;
+  box-shadow:none;
+  border:none;
+  text-decoration: none;
 }
+
 
 .panel > .panel-heading > a:focus,
 .panel > .panel-heading > a:hover
 {
   text-decoration: none;
+  border: none;
+  box-shadow: none;
+  border-color: none;
 }
 
 .col-sm-2
